add footer hala team

--- a/html/index.html
+++ b/html/index.html
@@ -76,7 +76,9 @@ sec.style.background = color ;
 
 
 
-
+<footer class="footer">
+        <p>create by hala team | programmer(Github) : farid saboor</p>
+</footer>
 
 </body>
 </html>
